Update action name

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Cat for GitHub Actions'
+name: 'Cat for GitHub Actions (Updated)'
 description: 'cat command like action'
 author: 'Stanzilla'
 inputs:
