--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cat",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "simple cat action for GitHub Actions",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "ncc build -o dist/ src/index.ts && git add -f dist/"
+    "release": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js && git add -f dist/"
   },
   "keywords": [
     "cat"
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.2",
-    "@zeit/ncc": "^0.22.3",
+    "esbuild": "^0.20.2",
     "typescript": "^5.4.3"
   }
 }
